--- a/views/disqualify_form.pug
+++ b/views/disqualify_form.pug
@@ -5,10 +5,14 @@ block content
   p Welcome to #{title}
 
   form(method='POST' action='')
-    .form-group
+      div.form-group
       input(type='hidden' name='mappingId' value=mappingId)
-      label(for='fd_intent') Intent:
-      input#intent.form-control(type='text', placeholder='description of the field' name='fd_intent' value=(undefined===intent ? '' : intent))
+      //- label(for='fd_intent') Intent:
+      //- input#intent.form-control(type='text', placeholder='description of the field' name='fd_intent' value=(undefined===intent ? '' : intent))
+      label(for='country') countryName:
+            input#country.form-control(type='text', placeholder='country name' name='countryName')
+      label(for='code') productCode:
+            input#code.form-control(type='text', placeholder='product code' name='productCode')
     button.btn.btn-primary(type='submit') Submit
 
   if errors
