--- a/views/disqualify_form.pug
+++ b/views/disqualify_form.pug
@@ -9,8 +9,10 @@ block content
       input(type='hidden' name='mappingId' value=mappingId)
       //- label(for='fd_intent') Intent:
       //- input#intent.form-control(type='text', placeholder='description of the field' name='fd_intent' value=(undefined===intent ? '' : intent))
+      div.form-group
       label(for='country') countryName:
             input#country.form-control(type='text', placeholder='country name' name='countryName')
+      div.form-group
       label(for='code') productCode:
             input#code.form-control(type='text', placeholder='product code' name='productCode')
     button.btn.btn-primary(type='submit') Submit
