--- a/views/disqualify_form.pug
+++ b/views/disqualify_form.pug
@@ -10,8 +10,8 @@ block content
       //- label(for='fd_intent') Intent:
       //- input#intent.form-control(type='text', placeholder='description of the field' name='fd_intent' value=(undefined===intent ? '' : intent))
       div.form-group
-      label(for='country') countryName:
-            input#country.form-control(type='text', placeholder='country name' name='countryName')
+      label(for='fd_country') CountryName:
+            input#country.form-control(type='text', placeholder='country name' name='fd_country' value=(undefined===country ? '' : country))
         button.btn.btn-primary(type='submit') Submit
 
   if errors
