--- a/views/disqualify_form.pug
+++ b/views/disqualify_form.pug
@@ -11,10 +11,10 @@ block content
       //- input#intent.form-control(type='text', placeholder='description of the field' name='fd_intent' value=(undefined===intent ? '' : intent))
       div.form-group
       label(for='fd_country') CountryName:
-      input#country.form-control(type='text', placeholder='country name' name='fd_country' value=(undefined===country ? '' : country))
+      input#country.form-control(type='text', placeholder='country name' name='fd_country' value=country)
       div.form-group
       label(for='fd_code') ProductCode:
-      input#code.form-control(type='text', placeholder='product code' name='fd_code' value=(undefined===code ? '' : code))
+      input#code.form-control(type='text', placeholder='product code' name='fd_code' value=code)
       button.btn.btn-primary(type='submit') Submit
 
   if errors
