--- a/views/disqualify_result.pug
+++ b/views/disqualify_result.pug
@@ -3,6 +3,8 @@ extends layout
 block content
   h1= title
   p Mapping Id: #{mappingId}
+  p Country Name: #{Country}
+  p Product Code: #{code}
 
   if errors
     ul
