--- a/views/disqualify_result.pug
+++ b/views/disqualify_result.pug
@@ -3,7 +3,7 @@ extends layout
 block content
   h1= title
   p Mapping Id: #{mappingId}
-  p Country Name: #{Country}
+  p Country Name: #{country}
   p Product Code: #{code}
 
   if errors
