--- a/views/disqualify_result.pug
+++ b/views/disqualify_result.pug
@@ -3,8 +3,7 @@ extends layout
 block content
   h1= title
   p Mapping Id: #{mappingId}
-  p Country Name: #{country}
-  p Product Code: #{code}
+  p TEST SUCCESS
 
   if errors
     ul
