--- a/views/disqualify_form.pug
+++ b/views/disqualify_form.pug
@@ -1,21 +1,23 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+ .main.container
+    .row
+      .col-md-6.col-md-offset-3
+        h1.display-4.m-b-2 = title
 
-  form(method='POST' action='')
-      div.form-group
-      input(type='hidden' name='mappingId' value=mappingId)
-      //- label(for='fd_intent') Intent:
-      //- input#intent.form-control(type='text', placeholder='description of the field' name='fd_intent' value=(undefined===intent ? '' : intent))
-      div.form-group
-      label(for='country') CountryName:
-      input#country.form-control(type='text', placeholder='country name' name='country' value=country)
-      div.form-group
-      label(for='code') ProductCode:
-      input#code.form-control(type='text', placeholder='product code' name='code' value=code)
-      button.btn.btn-primary(type='submit') Submit
+        form(method='POST' action='')
+            div.form-group
+            input(type='hidden' name='mappingId' value=mappingId)
+            //- label(for='fd_intent') Intent:
+            //- input#intent.form-control(type='text', placeholder='description of the field' name='fd_intent' value=(undefined===intent ? '' : intent))
+            div.form-group
+            label(for='country') CountryName:
+            input#country.form-control(type='text', placeholder='country name' name='country' value=country)
+            div.form-group
+            label(for='code') ProductCode:
+            input#code.form-control(type='text', placeholder='product code' name='code' value=code)
+            button.btn.btn-primary(type='submit') Submit
 
   if errors
     ul
