--- a/views/disqualify_form.pug
+++ b/views/disqualify_form.pug
@@ -15,7 +15,7 @@ block content
       div.form-group
       label(for='code') ProductCode:
       input#code.form-control(type='text', placeholder='product code' name='code' value=code)
-      p button.btn.btn-primary(type='submit') Submit
+      button.btn.btn-primary(type='submit') Submit
 
   if errors
     ul
