--- a/views/disqualify_form.pug
+++ b/views/disqualify_form.pug
@@ -11,19 +11,19 @@ block content
       input#intent.form-control(type='text', placeholder='Please select intent...' name='intent' value="tour-search")
       br
       label(for='country') Country:
-      input#country.form-control(type='text', placeholder='Country name...' name='country' value='')
+      input#country.form-control(type='text', placeholder='Country name...' name='country' value='ญี่ปุ่น')
       br
       label(for='tourcode') Product Code:
-      input#code.form-control(type='text', placeholder='Product code...' name='tourcode' value='')
+      input#tourcode.form-control(type='text', placeholder='Product code...' name='tourcode' value='xxxxxx')
       br
       label(for='departuredate') Departure:
-      input#code.form-control(type='text', placeholder='วันเดินทางไป 2017-06-20' name='departuredate' value='')
+      input#departuredate.form-control(type='text', placeholder='วันเดินทางไป 2017-06-20' name='departuredate' value='2017-09-02')
       br
       label(for='returndate') Return:
-      input#code.form-control(type='text', placeholder='วันเดินทางกลับ 2017-06-27' name='returndate' value='')
+      input#returndate.form-control(type='text', placeholder='วันเดินทางกลับ 2017-06-27' name='returndate' value='2018-01-01')
       br
       label(for='traveler') Number of passengers:
-      input#code.form-control(type='text', placeholder='จำนวนคนที่จะเดินทาง' name='traveler' value="2")
+      input#traveler.form-control(type='text', placeholder='จำนวนคนที่จะเดินทาง' name='traveler' value="2")
       br
       button.btn.btn-primary(type='submit') Submit
 
