--- a/views/disqualify_result.pug
+++ b/views/disqualify_result.pug
@@ -3,7 +3,7 @@ extends layout
 block content
   h1= title
   p Mapping Id: #{mappingId}
-  p TEST SUCCESS
+  p Sent to get data = SUCCESS
 
   if errors
     ul
