--- a/views/disqualify_form.pug
+++ b/views/disqualify_form.pug
@@ -11,16 +11,19 @@ block content
       input#intent.form-control(type='text', placeholder='Please select intent...' name='intent' value=intent)
       br
       label(for='country') Country:
-      input#country.form-control(type='text', placeholder='Country name...' name='country' value=country)
+      input#country.form-control(type='text', placeholder='ประเทศที่ต้องการเดินทาง' name='country' value=country)
       br
       label(for='tourcode') Product Code:
-      input#tourcode.form-control(type='text', placeholder='Product code...' name='tourcode' value=tourcode)
+      input#tourcode.form-control(type='text', placeholder='รหัสสินค้า' name='tourcode' value=tourcode)
       br
       label(for='departuredate') Departure:
-      input#departuredate.form-control(type='text', placeholder='วันเดินทางไป YYYY-mm-dd' name='departuredate' value=departuredate)
+      input#departuredate.form-control(type='text', placeholder='วันเดินทางไป' name='departuredate' value=departuredate)
       br
       label(for='returndate') Return:
-      input#returndate.form-control(type='text', placeholder='วันเดินทางกลับ YYYY-mm-dd' name='returndate' value=returndate)
+      input#returndate.form-control(type='text', placeholder='วันเดินทางกลับ' name='returndate' value=returndate)
+      br
+      label(for='month') Return:
+      input#month.form-control(type='text', placeholder='เดือนที่จะเดินทาง' name='month' value=month)
       br
       label(for='traveler') Number of passengers:
       input#traveler.form-control(type='text', placeholder='จำนวนคนที่จะเดินทาง' name='traveler' value=traveler)
