--- a/views/disqualify_form.pug
+++ b/views/disqualify_form.pug
@@ -22,7 +22,7 @@ block content
       label(for='returndate') Return:
       input#returndate.form-control(type='text', placeholder='วันเดินทางกลับ' name='returndate' value=returndate)
       br
-      label(for='month') Return:
+      label(for='month') Month:
       input#month.form-control(type='text', placeholder='เดือนที่จะเดินทาง' name='month' value=month)
       br
       label(for='traveler') Number of passengers:
