--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,6 +2,6 @@
 html
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/main.css')
+    link(href='//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css', rel='stylesheet')
   body
     block content
