--- a/views/disqualify_form.pug
+++ b/views/disqualify_form.pug
@@ -1,36 +1,38 @@
-extends layout
+extends ../node_modules/pug-bootstrap/_bootstrap
 
-block content
+append body
   h1= title
   p Welcome to #{title}
+  +alert-info("This is a sample info alert.")
 
-  form(method='POST' action='' type='callAPI')
-    div.form-group
-      input(type='hidden' name='mappingId' value=mappingId)
-      label(for='fd_intent') Intent: 
-      input#intent.form-control(type='text', placeholder='Please select intent...' name='intent' value=intent)
-      br
-      label(for='country') Country:
-      input#country.form-control(type='text', placeholder='ประเทศที่ต้องการเดินทาง' name='country' value=country)
-      br
-      label(for='tourcode') Product Code:
-      input#tourcode.form-control(type='text', placeholder='รหัสสินค้า' name='tourcode' value=tourcode)
-      br
-      label(for='departuredate') Departure:
-      input#departuredate.form-control(type='text', placeholder='วันเดินทางไป' name='departuredate' value=departuredate)
-      br
-      label(for='returndate') Return:
-      input#returndate.form-control(type='text', placeholder='วันเดินทางกลับ' name='returndate' value=returndate)
-      br
-      label(for='month') Month:
-      input#month.form-control(type='text', placeholder='เดือนที่จะเดินทาง' name='month' value=month)
-      br
-      label(for='traveler') Number of passengers:
-      input#traveler.form-control(type='text', placeholder='จำนวนคนที่จะเดินทาง' name='traveler' value=traveler)
-      br
-      button.btn.btn-primary(type='submit') Submit  
+  div.container
+    form(method='POST' action='' type='callAPI')
+      div.form-group
+        input(type='hidden' name='mappingId' value=mappingId)
+        label(for='fd_intent') Intent: 
+        input#intent.form-control(type='text', placeholder='Please select intent...' name='intent' value=intent)
+        br
+        label(for='country') Country:
+        input#country.form-control(type='text', placeholder='ประเทศที่ต้องการเดินทาง' name='country' value=country)
+        br
+        label(for='tourcode') Product Code:
+        input#tourcode.form-control(type='text', placeholder='รหัสสินค้า' name='tourcode' value=tourcode)
+        br
+        label(for='departuredate') Departure:
+        input#departuredate.form-control(type='text', placeholder='วันเดินทางไป' name='departuredate' value=departuredate)
+        br
+        label(for='returndate') Return:
+        input#returndate.form-control(type='text', placeholder='วันเดินทางกลับ' name='returndate' value=returndate)
+        br
+        label(for='month') Month:
+        input#month.form-control(type='text', placeholder='เดือนที่จะเดินทาง' name='month' value=month)
+        br
+        label(for='traveler') Number of passengers:
+        input#traveler.form-control(type='text', placeholder='จำนวนคนที่จะเดินทาง' name='traveler' value=traveler)
+        br
+        button.btn.btn-primary(type='submit') Submit  
 
-  if errors
-    ul
-      for error in errors
-        li!=error.msg
+    if errors
+      ul
+        for error in errors
+          li!=error.msg
