--- a/views/disqualify_form.pug
+++ b/views/disqualify_form.pug
@@ -13,11 +13,10 @@ append body
         input#intent.form-control(type='text', placeholder='Please select intent...' name='intent' value=intent)
         br
         label(for='country') Country:
-        +dropdown(country,[
-          {text:"ญี่ปุ่น",value:"ญี่ปุ่น"},
-          {text:"เกาหลี",value:"เกาหลี"},
-          {text:"จีน",value:"จีน"},
-        ])
+        select
+            option(value="ญี่ปุ่น" selected=true) ญี่ปุ่น
+            option(value="เกาหลี") เกาหลี
+            option(value="จีน") จีน
         br
         label(for='tourcode') Product Code:
         input#tourcode.form-control(type='text', placeholder='รหัสสินค้า' name='tourcode' value=tourcode)
