--- a/views/disqualify_form.pug
+++ b/views/disqualify_form.pug
@@ -13,10 +13,9 @@ append body
         input#intent.form-control(type='text', placeholder='Please select intent...' name='intent' value=intent)
         br
         label(for='country') Country:
-        select.selectpicker
-            option(value="ญี่ปุ่น" selected=true) ญี่ปุ่น
-            option(value="เกาหลี") เกาหลี
-            option(value="จีน") จีน
+        select#Country.form-control
+          option(value="ญี่ปุ่น" selected=true) ญี่ปุ่น
+          option(value="เกาหลี") เกาหลี
         br
         label(for='tourcode') Product Code:
         input#tourcode.form-control(type='text', placeholder='รหัสสินค้า' name='tourcode' value=tourcode)
