--- a/views/disqualify_form.pug
+++ b/views/disqualify_form.pug
@@ -16,15 +16,16 @@ append body
         select#Country.form-control
           option(value="ญี่ปุ่น" selected=true) ญี่ปุ่น
           option(value="เกาหลี") เกาหลี
+          option(value="จีน") จีน
         br
         label(for='tourcode') Product Code:
         input#tourcode.form-control(type='text', placeholder='รหัสสินค้า' name='tourcode' value=tourcode)
         br
         label(for='departuredate') Departure:
-        input#departuredate.form-control(type='text', placeholder='วันเดินทางไป' name='departuredate' value=departuredate)
+        +icon("calendar")input#departuredate.form-control(type='text', placeholder='วันเดินทางไป' name='departuredate' value=departuredate)
         br
         label(for='returndate') Return:
-        input#returndate.form-control(type='text', placeholder='วันเดินทางกลับ' name='returndate' value=returndate)
+        +icon("calendar")input#returndate.form-control(type='text', placeholder='วันเดินทางกลับ' name='returndate' value=returndate)
         br
         label(for='month') Month:
         input#month.form-control(type='text', placeholder='เดือนที่จะเดินทาง' name='month' value=month)
