--- a/views/disqualify_form.pug
+++ b/views/disqualify_form.pug
@@ -13,7 +13,7 @@ append body
         input#intent.form-control(type='text', placeholder='Please select intent...' name='intent' value=intent)
         br
         label(for='country') Country:
-        select#Country.form-control
+        select#country.form-control
           option(value="ญี่ปุ่น") ญี่ปุ่น
           option(value="เกาหลี") เกาหลี
           option(value="ฮ่องกง") ฮ่องกง
