--- a/views/disqualify_form.pug
+++ b/views/disqualify_form.pug
@@ -14,7 +14,7 @@ append body
         br
         label(for='country') Country:
         select#country.form-control(type='select' placeholder='เลือกประเทศ' name='country')
-          option(value=country)
+          option(value=country) 
           option(value="ญี่ปุ่น") ญี่ปุ่น
           option(value="เกาหลี") เกาหลี
           option(value="ฮ่องกง") ฮ่องกง
@@ -27,10 +27,10 @@ append body
         input#tourcode.form-control(type='text', placeholder='รหัสสินค้า' name='tourcode' value=tourcode)
         br
         label(for='departuredate') Departure:
-        input#departuredate.form-control(type='date', placeholder='วันเดินทางไป' name='departuredate' value=departuredate)
+        input#departuredate.form-control(type='text', placeholder='วันเดินทางไป' name='departuredate' value=departuredate)
         br
         label(for='returndate') Return:
-        input#returndate.form-control(type='date', placeholder='วันเดินทางกลับ' name='returndate' value=returndate)
+        input#returndate.form-control(type='text', placeholder='วันเดินทางกลับ' name='returndate' value=returndate)
         br
         label(for='month') Month:
         input#month.form-control(type='text', placeholder='เดือนที่จะเดินทาง' name='month' value=month)
