--- a/views/disqualify_form.pug
+++ b/views/disqualify_form.pug
@@ -15,11 +15,77 @@ append body
         label(for='country') Country:
         select#country.form-control(type='select' placeholder='เลือกประเทศ' name='country')
           option(value="ญี่ปุ่น") ญี่ปุ่น
-          option(value="เกาหลี") เกาหลี
           option(value="ฮ่องกง") ฮ่องกง
+          option(value="เกาหลี") เกาหลี
           option(value="จีน") จีน
+          option(value="อิตาลี") อิตาลี
+          option(value="เวียดนาม") เวียดนาม
           option(value="ไต้หวัน") ไต้หวัน
+          option(value="พม่า") พม่า
           option(value="สิงคโปร์") สิงคโปร์
+          option(value="เยอรมัน") เยอรมัน
+          option(value="ออสเตรเลีย") ออสเตรเลีย
+          option(value="นิวซีแลนด์") นิวซีแลนด์
+          option(value="มาเก๊า") มาเก๊า
+          option(value="อังกฤษ") อังกฤษ
+          option(value="มาเลเซีย") มาเลเซีย
+          option(value="สวิตเซอร์แลนด์") สวิตเซอร์แลนด์
+          option(value="อเมริกา") อเมริกา
+          option(value="รัสเซีย") รัสเซีย
+          option(value="ออสเตรีย") ออสเตรีย
+          option(value="ฝรั่งเศส") ฝรั่งเศส
+          option(value="ลาว") ลาว
+          option(value="อินโดนีเซีย") อินโดนีเซีย
+          option(value="ดูไบ") ดูไบ
+          option(value="ตุรกี") ตุรกี
+          option(value="อินเดีย") อินเดีย
+          option(value="สเปน") สเปน
+          option(value="กัมพูชา") กัมพูชา
+          option(value="อียิปต์") อียิปต์
+          option(value="เดนมาร์ก") เดนมาร์ก
+          option(value="โครเอเชีย") โครเอเชีย
+          option(value="แอฟริกาใต้") แอฟริกาใต้
+          option(value="จอร์แดน") จอร์แดน
+          option(value="บรูไน") บรูไน
+          option(value="ฟินแลนด์") ฟินแลนด์
+          option(value="ไอซ์แลนด์") ไอซ์แลนด์
+          option(value="เบลเยียม") เบลเยียม
+          option(value="เนเธอร์แลนด์") เนเธอร์แลนด์
+          option(value="มัลดีฟส์") มัลดีฟส์
+          option(value="ภูฏาน") ภูฏาน
+          option(value="เนปาล") เนปาล
+          option(value="กรีซ") กรีซ
+          option(value="ศรีลังกา") ศรีลังกา
+          option(value="สวีเดน") สวีเดน
+          option(value="สาธารณรัฐเช็ก") สาธารณรัฐเช็ก
+          option(value="นอร์เวย์") นอร์เวย์
+          option(value="โปแลนด์") โปแลนด์
+          option(value="ฟิลิปปินส์") ฟิลิปปินส์
+          option(value="แคนาดา") แคนาดา
+          option(value="ฮังการี") ฮังการี
+          option(value="โมร็อกโก") โมร็อกโก
+          option(value="โปรตุเกส") โปรตุเกส
+          option(value="บัลแกเรีย") บัลแกเรีย
+          option(value="เคนยา") เคนยา
+          option(value="อิหร่าน") อิหร่าน
+          option(value="เอสโตเนีย") เอสโตเนีย
+          option(value="สโลวีเนีย") สโลวีเนีย
+          option(value="โรมาเนีย") โรมาเนีย
+          option(value="จอร์เจีย") จอร์เจีย
+          option(value="บราซิล") บราซิล
+          option(value="เอกวาดอร์") เอกวาดอร์
+          option(value="เอธิโอเปีย") เอธิโอเปีย
+          option(value="อิสราเอล") อิสราเอล
+          option(value="แทนซาเนีย") แทนซาเนีย
+          option(value="ซิลี") ซิลี
+          option(value="เซอเบีย-มอนเทนนีโกร") เซอเบีย-มอนเทนนีโกร
+          option(value="มอริเชียส") มอริเชียส
+          option(value="มอลตา") มอลตา
+          option(value="อาร์เจนตินา") อาร์เจนตินา
+          option(value="ไอร์แลนด์") ไอร์แลนด์
+          option(value="ยูเครน") ยูเครน
+          option(value="เม็กซิโก") เม็กซิโก
+          option(value="มาดากัสการ์") มาดากัสการ์
           option(value="ยุโรป") ยุโรป
         br
         label(for='tourcode') Product Code:
