--- a/views/disqualify_form.pug
+++ b/views/disqualify_form.pug
@@ -51,10 +51,10 @@ append body
         input#tourcode.form-control(type='text', placeholder='รหัสสินค้า' name='tourcode' value=tourcode)
         br
         label(for='departuredate') Departure:
-        input#departuredate.form-control(type='text', placeholder='วันเดินทางไป' name='departuredate' value=departuredate)
+        input#departuredate.form-control(type='Number', placeholder='วันเดินทางไป' name='departuredate' value=departuredate)
         br
         label(for='returndate') Return:
-        input#returndate.form-control(type='text', placeholder='วันเดินทางกลับ' name='returndate' value=returndate)
+        input#returndate.form-control(type='Number', placeholder='วันเดินทางกลับ' name='returndate' value=returndate)
         br
         label(for='month') Month:
         input#month.form-control(type='text', placeholder='เดือนที่จะเดินทาง' name='month' value=month)
