--- a/views/disqualify_form.pug
+++ b/views/disqualify_form.pug
@@ -53,14 +53,17 @@ append body
         label(for='departuredate') Departure:
         input#departuredate.form-control(type='Number', placeholder='วันเดินทางไป' name='departuredate' value=departuredate)
         br
+        label(for='month') Departure-Month:
+        input#month.form-control(type='text', placeholder='เดือนที่จะเดินทาง' name='month' value=month)
+        br
         label(for='returndate') Return:
         input#returndate.form-control(type='Number', placeholder='วันเดินทางกลับ' name='returndate' value=returndate)
         br
-        label(for='month') Month:
+        label(for='month') Return-Month:
         input#month.form-control(type='text', placeholder='เดือนที่จะเดินทาง' name='month' value=month)
         br
         label(for='traveler') Number of passengers:
-        input#traveler.form-control(type='text', placeholder='จำนวนคนที่จะเดินทาง' name='traveler' value=traveler)
+        input#traveler.form-control(type='Number', placeholder='จำนวนคนที่จะเดินทาง' name='traveler' value=traveler)
         br
         +submit-primary("ส่งข้อมูล")        
 
