--- a/views/disqualify_form.pug
+++ b/views/disqualify_form.pug
@@ -14,27 +14,28 @@ append body
         br
         label(for='country') Country:
         select#country.form-control(type='select' placeholder='เลือกประเทศ' name='country')
-          option(value="ญี่ปุ่น" selected= country == ญี่ปุ่น) ญี่ปุ่น
-          option(value="เกาหลี" selected= country == เกาหลี) เกาหลี
-          option(value="ฮ่องกง" selected= country == ฮ่องกง) ฮ่องกง
-          option(value="สิงคโปร์" selected= country == สิงคโปร์) สิงคโปร์
-          option(value="ยุโรป" selected= country == ยุโรป) ยุโรป
-          option(value="พม่า" selected= country == พม่า) พม่า
-          option(value="เวียดนาม" selected= country == เวียดนาม) เวียดนาม
-          option(value="จีน" selected= country == จีน) จีน
-          option(value="มาเก๊า" selected= country == มาเก๊า) มาเก๊า
-          option(value="ลาว" selected= country == ลาว) ลาว
-          option(value="ไต้หวัน" selected= country == ไต้หวัน) ไต้หวัน
-          option(value="เยอรมัน" selected= country == เยอรมัน) เยอรมัน
-          option(value="อินเดีย" selected= country == อินเดีย) อินเดีย
-          option(value="อเมริกา" selected= country == อเมริกา) อเมริกา
-          option(value="ออสเตรเลีย" selected= country == ออสเตรเลีย) ออสเตรเลีย
-          option(value="นิวซีแลนด์" selected= country == นิวซีแลนด์) นิวซีแลนด์
-          option(value="อียิปต์" selected= country == อียิปต์) อียิปต์
-          option(value="แอฟริกาใต้" selected= country == แอฟริกาใต้) แอฟริกาใต้
-          option(value="รัสเซีย" selected= country == รัสเซีย) รัสเซีย
-          option(value="อังกฤษ" selected= country == อังกฤษ) อังกฤษ
-          option(value="ออสเตรีย" selected= country == ออสเตรีย) ออสเตรีย
+          option(value='0', selected= true) -- Select --
+          option(value="ญี่ปุ่น" selected= country.id == ญี่ปุ่น) ญี่ปุ่น
+          option(value="เกาหลี" selected= country.id == เกาหลี) เกาหลี
+          option(value="ฮ่องกง" selected= country.id == ฮ่องกง) ฮ่องกง
+          option(value="สิงคโปร์" selected= country.id == สิงคโปร์) สิงคโปร์
+          option(value="ยุโรป" selected= country.id == ยุโรป) ยุโรป
+          option(value="พม่า" selected= country.id == พม่า) พม่า
+          option(value="เวียดนาม" selected= country.id == เวียดนาม) เวียดนาม
+          option(value="จีน" selected= country.id == จีน) จีน
+          option(value="มาเก๊า" selected= country.id == มาเก๊า) มาเก๊า
+          option(value="ลาว" selected= country.id == ลาว) ลาว
+          option(value="ไต้หวัน" selected= country.id == ไต้หวัน) ไต้หวัน
+          option(value="เยอรมัน" selected= country.id == เยอรมัน) เยอรมัน
+          option(value="อินเดีย" selected= country.id == อินเดีย) อินเดีย
+          option(value="อเมริกา" selected= country.id == อเมริกา) อเมริกา
+          option(value="ออสเตรเลีย" selected= country.id == ออสเตรเลีย) ออสเตรเลีย
+          option(value="นิวซีแลนด์" selected= country.id == นิวซีแลนด์) นิวซีแลนด์
+          option(value="อียิปต์" selected= country.id == อียิปต์) อียิปต์
+          option(value="แอฟริกาใต้" selected= country.id == แอฟริกาใต้) แอฟริกาใต้
+          option(value="รัสเซีย" selected= country.id == รัสเซีย) รัสเซีย
+          option(value="อังกฤษ" selected= country.id == อังกฤษ) อังกฤษ
+          option(value="ออสเตรีย" selected= country.id == ออสเตรีย) ออสเตรีย
 
           script.
             var pOptions = document.getElementById('country').options;
