--- a/views/disqualify_form.pug
+++ b/views/disqualify_form.pug
@@ -42,13 +42,10 @@ append body
         label(for='departuredate') Departure:
         input#departuredate.form-control(type='Number', placeholder='วันเดินทางไป' name='departuredate' value=departuredate)
         br
-        label(for='month') Departure-Month:
-        input#month.form-control(type='text', placeholder='เดือนที่จะเดินทาง' name='month' value=month)
-        br
         label(for='returndate') Return:
         input#returndate.form-control(type='Number', placeholder='วันเดินทางกลับ' name='returndate' value=returndate)
         br
-        label(for='month') Return-Month:
+        label(for='month') Month:
         input#month.form-control(type='text', placeholder='เดือนที่จะเดินทาง' name='month' value=month)
         br
         label(for='traveler') Number of passengers:
