--- a/views/disqualify_form.pug
+++ b/views/disqualify_form.pug
@@ -42,11 +42,40 @@ append body
         label(for='departuredate') Departure:
         input#departuredate.form-control(type='Number', placeholder='วันเดินทางไป' name='departuredate' value=departuredate)
         br
+        label(for='month') Month:
+        //- input#month.form-control(type='text', placeholder='เดือนที่จะเดินทาง' name='month' value=month)
+        select#month.form-control(type='select', placeholder='เดือนที่จะเดินทาง' name='month' value=month)
+          option(value="มกราคม") มกราคม
+          option(value="กุมภาพันธ์") กุมภาพันธ์
+          option(value="มีนาคม") มีนาคม
+          option(value="เมษายน") เมษายน
+          option(value="พฤษภาคม") พฤษภาคม
+          option(value="มิถุนายน" ) มิถุนายน
+          option(value="กรกฎาคม") กรกฎาคม
+          option(value="สิงหาคม") สิงหาคม
+          option(value="กันยายน") กันยายน
+          option(value="ตุลาคม") ตุลาคม
+          option(value="พฤศจิกายน") พฤศจิกายน
+          option(value="ธันวาคม") ธันวาคม
+        br
         label(for='returndate') Return:
         input#returndate.form-control(type='Number', placeholder='วันเดินทางกลับ' name='returndate' value=returndate)
         br
         label(for='month') Month:
-        input#month.form-control(type='text', placeholder='เดือนที่จะเดินทาง' name='month' value=month)
+        //- input#month.form-control(type='text', placeholder='เดือนที่จะเดินทาง' name='month' value=month)
+        select#month.form-control(type='select', placeholder='เดือนที่จะเดินทาง' name='month' value=month)
+          option(value="มกราคม") มกราคม
+          option(value="กุมภาพันธ์") กุมภาพันธ์
+          option(value="มีนาคม") มีนาคม
+          option(value="เมษายน") เมษายน
+          option(value="พฤษภาคม") พฤษภาคม
+          option(value="มิถุนายน" ) มิถุนายน
+          option(value="กรกฎาคม") กรกฎาคม
+          option(value="สิงหาคม") สิงหาคม
+          option(value="กันยายน") กันยายน
+          option(value="ตุลาคม") ตุลาคม
+          option(value="พฤศจิกายน") พฤศจิกายน
+          option(value="ธันวาคม") ธันวาคม
         br
         label(for='traveler') Number of passengers:
         input#traveler.form-control(type='Number', placeholder='จำนวนคนที่จะเดินทาง' name='traveler' value=traveler)
