--- a/views/disqualify_form.pug
+++ b/views/disqualify_form.pug
@@ -13,7 +13,7 @@ append body
         input#intent.form-control(type='text', placeholder='Please select intent...' name='intent' value=intent)
         br
         label(for='country') Country:
-        select#country.select.form-control.input(type='select' placeholder='เลือกประเทศ' name='country')
+        select#country.select.form-control.input(type='select' placeholder='เลือกประเทศ' name='country' value=country)
           option(value="ญี่ปุ่น") ญี่ปุ่น
           option(value="เกาหลี") เกาหลี
           option(value="ฮ่องกง") ฮ่องกง
